[package]
name = "kdmp-parser"
version = "0.1.1"
edition = "2021"
authors = ["Axel '0vercl0k' Souchet"]
categories = ["parser-implementations"]
description = "A KISS Rust crate to parse Windows kernel crash-dumps created by Windows & its debugger."
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/src/**",
    "README.md",
]
keywords = ["windows", "kernel", "crashdump"]
license = "MIT"
repository = "https://github.com/0vercl0k/kdmp-parser-rs"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitflags = "2.4.2"
thiserror = "1.0.58"

[dev-dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }

[[example]]
name = "parser"
