[package]
name = "kdmp-parser"
version = "0.7.0"
edition = "2024"
authors = ["Axel '0vercl0k' Souchet"]
categories = ["parser-implementations"]
description = "A KISS Rust crate to parse Windows kernel crash-dumps created by Windows & its debugger."
include = ["/Cargo.toml", "/LICENSE", "/src/**", "/examples/**", "README.md"]
keywords = ["windows", "kernel", "crashdump"]
license = "MIT"
repository = "https://github.com/0vercl0k/kdmp-parser-rs"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitflags = "2.9.2"
thiserror = "2"

[dev-dependencies]
anyhow = "1.0"
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "parser"

[lints.clippy]
pedantic = "warn"